--- a/films/templates/registration/register.html
+++ b/films/templates/registration/register.html
@@ -2,31 +2,31 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<div class="align-center col-8 offset-2">
-    <p class="lead mb-3 ml-0">Register</p>
-    <hr/>
-    <form method="POST" action="{% url 'register' %}" autocomplete='off'>
-        {% csrf_token %}
+    <div class="align-center col-8 offset-2">
+        <p class="lead mb-3 ml-0">Register</p>
+        <hr/>
+        <form method="POST" action="{% url 'register' %}" autocomplete='off'>
+            {% csrf_token %}
 
-        <div class="form-group mb-3">
-            <label>{{ form.username.label_tag }}</label>
-            {{ form.username.errors }}
-            {% render_field form.username class="form-control" hx-post="/check_username/" hx-swap="outerhtml" hx-trigger="keyup" hx-target="#username-err" %}
-            <div class="text-danger mt-2" id="username-err"></div>
-        </div>
-        <div>
+            <div class="form-group mb-3">
+                <label>{{ form.username.label_tag }}</label>
+                {{ form.username.errors }}
+                {% render_field form.username class="form-control" hx-post="/check_username/" hx-swap="outerhtml" hx-trigger="keyup changed" hx-target="#username-err" %}
+                <div id="username-err"></div>
+            </div>
+            <div>
 
-            <label>{{ form.password1.label_tag }}</label>
-            {{ form.password1.errors }}
-            {% render_field form.password1 class="form-control" %}
-        </div>
-        <div>
-            <label>{{ form.password2.label_tag }}</label>
-            {{ form.password2.errors }}
-            {% render_field form.password2 class="form-control" %}
-        </div>
-        
-        <button type="submit" class="btn btn-success mt-2">Register</button>
-    </form>
-</div>
+                <label>{{ form.password1.label_tag }}</label>
+                {{ form.password1.errors }}
+                {% render_field form.password1 class="form-control" %}
+            </div>
+            <div>
+                <label>{{ form.password2.label_tag }}</label>
+                {{ form.password2.errors }}
+                {% render_field form.password2 class="form-control" %}
+            </div>
+
+            <button type="submit" class="btn btn-success mt-2">Register</button>
+        </form>
+    </div>
 {% endblock content %}
