feature(search): add dynamic search functionality
- Search results update as you type
- On adding/deleting a film, a corresponding message shows up and disappears after 3 seconds

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,12 +2,18 @@
     height: 100px;
 }
 
-.success {
+.alert-error {
+    color: #842029;
+    background-color: #f8d7da;
+    border: #f5c2c7;
+}
+
+.registration_success {
     color: green;
     transition: all ease-in .5s;
 }
 
-.error {
+.registration_error {
     color: red;
     font-size: 50px;
     transform: rotate(45deg);
