--- a/films/templates/films.html
+++ b/films/templates/films.html
@@ -7,7 +7,7 @@
             <p class="lead ml-0">My Films</p>
             <form class="d-flex align-items-center">
                 {% csrf_token %}
-                <input type="text" name="filmname" class="form-control-sm mr-2" placeholder="Enter a film">
+                <input id="filmname" type="text" name="filmname" class="form-control-sm mr-2" placeholder="Enter a film">
                 <button hx-post="{% url 'add-film' %}" hx-target="#film-list"
                         type="submit" class="btn btn-success btn-sm">Add Film</button>
             </form>
