feature(message animation): add fade-in-out to alert message
Occurs when we add/delete a film

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,6 +2,17 @@
     height: 100px;
 }
 
+.fade-in-out {
+	animation: fadeinout 5s linear forwards;
+  	opacity: 0;
+}
+
+@keyframes fadeinout {
+  20% { opacity: 1; } /* fade in */
+  80% { opacity: 1; } /* stay at full visibility */
+  100% { opacity: 0; } /* fade out */
+}
+
 .alert-error {
     color: #842029;
     background-color: #f8d7da;
