--- a/films/templates/partials/film-list.html
+++ b/films/templates/partials/film-list.html
@@ -2,11 +2,13 @@
     <section class="col-6">
 
         {% if messages %}
-            {# clear message after 3 seconds #}
+            {# clear message after 5 seconds; mind fade-in-out style for % transitions #}
             {# after we show message (aka it loads), send get request to 'clear' url, i.e. empty string #}
-            <ul class="messages" hx-get="{% url 'clear' %}" hx-trigger="load delay:3s">
+            <ul class="messages" hx-get="{% url 'clear' %}" hx-trigger="load delay:5s">
                 {% for message in messages %}
-                    <div{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</div>
+                    <div{% if message.tags %} class="alert alert-{{ message.tags }} fade-in-out"{% endif %}>
+                        {{ message }}
+                    </div>
                 {% endfor %}
             </ul>
         {% endif %}
