--- a/films/templates/partials/film-list.html
+++ b/films/templates/partials/film-list.html
@@ -15,17 +15,24 @@
 
         {% if films %}
             {% csrf_token %}
-            <ul class="list-group col-12">
+            {# form source: https://htmx.org/examples/sortable/#}
+            <form class="sortable list-group col-12" hx-trigger="end" hx-post="{% url 'sort' %}" hx-target="#film-list">
+                <div class="htmx-indicator">Updating...</div>
+                {# Shows a message mid-drag #}
                 {% for film in films %}
-                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                        {{ film.name }}
-                        <span class="badge badge-danger badge-pill" style="cursor:pointer;"
-                              hx-delete="{% url 'delete-film' film.pk %}"
-                              hx-target="#film-list"
-                              hx-confirm="Are you sure you wish to delete?">X</span>
-                    </li>
+                    <div>
+                        <input type="hidden" name="film_order" value="{{ film.pk }}">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            {# Instance if UserFilms with film field that leads to foreign key name#}
+                            #{{ film.order }} {{ film.films.name }}
+                            <span class="badge badge-danger badge-pill" style="cursor:pointer;"
+                                  hx-delete="{% url 'delete-film' film.pk %}"
+                                  hx-target="#film-list"
+                                  hx-confirm="Are you sure you wish to delete?">X</span>
+                        </li>
+                    </div>
                 {% endfor %}
-            </ul>
+            </form>
         {% else %}
             <p>You do not have any films in your list</p>
         {% endif %}
