--- a/films/templates/partials/film-list.html
+++ b/films/templates/partials/film-list.html
@@ -1,3 +1,17 @@
+<div class="align-center col-10 offset-1">
+        <div class="d-flex justify-content-between align-items-center">
+            <p class="lead ml-0">My Films</p>
+            <form class="d-flex align-items-center">
+                {% csrf_token %}
+                <input id="filmname" type="text" name="filmname" class="form-control-sm mr-2" placeholder="Enter a film">
+                <button hx-post="{% url 'add-film' %}" hx-target="#film-list"
+                        type="submit" class="btn btn-success btn-sm">Add Film</button>
+            </form>
+        </div>
+    </div>
+    <hr>
+
+
 <div class="d-flex justify-content-between">
     <section class="col-6">
 
@@ -24,7 +38,9 @@
                         <input type="hidden" name="film_order" value="{{ film.pk }}">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             {# Instance if UserFilms with film field that leads to foreign key name#}
-                            #{{ film.order }} {{ film.films.name }}
+                            <a hx-get="{% url 'detail' film.pk %}" hx-target="#film-list">
+                                #{{ film.order }} {{ film.films.name }}
+                            </a>
                             <span class="badge badge-danger badge-pill" style="cursor:pointer;"
                                   hx-delete="{% url 'delete-film' film.pk %}"
                                   hx-target="#film-list"
