--- a/films/templates/partials/film-detail.html
+++ b/films/templates/partials/film-detail.html
@@ -4,7 +4,9 @@
         <p>This film is #{{ userfilm.order }} in {{ userfilm.user.username|title }}'s list</p>
         <button class="btn btn-primary"
                 hx-get="{% url 'film-list-partial' %}"
-                hx-target="#film-list">Your List
+                hx-target="#film-list"
+{#                Changes url in browser to /films. Replicates React/Vue router functionality #}
+                hx-push-url="{% url 'film-list' %}">Your List
         </button>
     </div>
 
