--- a/films/templates/partials/film-list.html
+++ b/films/templates/partials/film-list.html
@@ -31,23 +31,9 @@
             {% csrf_token %}
             {# form source: https://htmx.org/examples/sortable/#}
             <form class="sortable list-group col-12" hx-trigger="end" hx-post="{% url 'sort' %}" hx-target="#film-list">
-                <div class="htmx-indicator">Updating...</div>
                 {# Shows a message mid-drag #}
-                {% for film in films %}
-                    <div>
-                        <input type="hidden" name="film_order" value="{{ film.pk }}">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            {# Instance if UserFilms with film field that leads to foreign key name#}
-                            <a hx-get="{% url 'detail' film.pk %}" hx-target="#film-list">
-                                #{{ film.order }} {{ film.films.name }}
-                            </a>
-                            <span class="badge badge-danger badge-pill" style="cursor:pointer;"
-                                  hx-delete="{% url 'delete-film' film.pk %}"
-                                  hx-target="#film-list"
-                                  hx-confirm="Are you sure you wish to delete?">X</span>
-                        </li>
-                    </div>
-                {% endfor %}
+                <div class="htmx-indicator">Updating...</div>
+                    {% include 'partials/film-list-elements.html' %}
             </form>
         {% else %}
             <p>You do not have any films in your list</p>
